# clidogs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: audit.yaml  ci.yaml  docs.yaml  github-pages-rust-doc.yaml  rust-ci.yaml
CLIDogs/: all.html  fn.main.html  index.html
clidogs/: all.html  fn.main.html  index.html  sidebar-items.js  static.DOG1.html
src/: color_printer.rs  colors.rs  command.rs  main.rs
src/CLIDogs/: main.rs.html
src/art/: dog1.txt
src/clidogs/: main.rs.html
