[package]
name = "clidogs"
description = "∪･ω･U"
version = "0.1.0"
edition = "2021"
authors = ["Bradley Reynolds <bradley.reynolds@darbia.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/letsbuilda/clidogs"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
rand = "0.8.5"
owo-colors = "4.1.0"
